trying to fix some shit on mobile

--- a/styles.css
+++ b/styles.css
@@ -347,12 +347,8 @@ body.voice-acting::after {
     align-items: center;
     width: 100%;
     padding: calc(var(--space));
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
     z-index: 100;
-    will-change: transform;
 }
-
 
 .work-section .links-grid {
     display: flex;
